# perchance-rs

./: Cargo.toml
parse/: Cargo.toml
parse/fixtures/: missing-rule.pc
parse/fixtures/items/: inline-rule.pc  one-item.pc  two-items.pc
parse/fixtures/rule/: odds.pc  options.pc
parse/samples/: complex.pc  pack.pc
parse/src/: error.rs  integration.rs  lib.rs  main.rs  perchance.pest
parse/src/ast/: item.rs  mod.rs  rule.rs
parse/src/macros/: next.rs  validate_rule.rs
